--- a/index.html
+++ b/index.html
@@ -59,20 +59,64 @@
 
 
 		<!-- maket 2 EuphoriaEcommerce -->
-			<div class="block-euphoria">
-				<div class="block-euphoria-left">
-					<div class="block-euphoria-left-content">
-						<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
-						<p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
-							Affordable fashion 24/7
-						</p>
-						<a href="#">Shop Now</a>
+		<div class="block-euphoria">
+			<div class="block-euphoria-left">
+				<div class="block-euphoria-left-content">
+					<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
+					<p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
+						Affordable fashion 24/7
+					</p>
+					<a href="#">Shop Now</a>
+				</div>
+			</div>
+
+			<div class="block-euphoria-right">
+			</div>
+		</div>
+
+
+		<!-- maket 3 Latest Projects -->
+		<div class="block-latest-projects">
+			<div class="block-latest-projects-text">
+				<h5><span class="block-latest-projects-span"></span>Latest Projects</h5>
+				<h2>Discover our latest client projects</h2>
+				<div class="block-latest-projects-sub-title">
+					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+						to corporate strategy foster collaborative thinking to further the overal.
+					</p>
+				</div>
+			</div>
+
+
+				<div class="block-cards">
+					<div class="block-card block-card-first">
+						<div class="block-card-img block-card-img-first"></div>
+						<div class="block-card-title">
+							<p>Financial Investment</p>
+						</div>
+						<div class="block-card-data">Sep 2022</div>
+					</div>
+
+
+					<div class="block-card block-card-two">
+						<div class="block-card-img block-card-img-two"></div>
+						<div class="block-card-title">
+							<p>Marketing Strategy</p>
+						</div>
+						<div class="block-card-data">Sep 2022</div>
+					</div>
+
+
+					<div class="block-card">
+						<div class="block-card-img block-card-img-tree"></div>
+						<div class="block-card-title">
+							<p>Business Consulting</p>
+						</div>
+						<div class="block-card-data">Sep 2022</div>
 					</div>
 				</div>
 
-						<div class="block-euphoria-right">
-						</div>
-			</div>
+		</div>
 
 	</main>
 	<footer></footer>
