--- a/index.html
+++ b/index.html
@@ -81,15 +81,17 @@
 				<h5><span class="block-latest-projects-span"></span>Latest Projects</h5>
 				<h2>Discover our latest client projects</h2>
 				<div class="block-latest-projects-sub-title">
-					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
+						approaches
 						to corporate strategy foster collaborative thinking to further the overal.
 					</p>
 				</div>
 			</div>
 
 
-				<div class="block-cards">
-					<div class="block-card block-card-first">
+			<div class="block-cards">
+				<div class="row-a">
+					<div class="block-card ">
 						<div class="block-card-img block-card-img-first"></div>
 						<div class="block-card-title">
 							<p>Financial Investment</p>
@@ -98,7 +100,7 @@
 					</div>
 
 
-					<div class="block-card block-card-two">
+					<div class="block-card ">
 						<div class="block-card-img block-card-img-two"></div>
 						<div class="block-card-title">
 							<p>Marketing Strategy</p>
@@ -116,6 +118,91 @@
 					</div>
 				</div>
 
+
+				<div class="row-b">
+					<div class="block-card">
+						<div class="block-card-img block-card-img-four"></div>
+						<div class="block-card-title">
+							<p>Financial Investment</p>
+						</div>
+						<div class="block-card-data">Sep 2022</div>
+					</div>
+
+
+					<div class="block-card">
+						<div class="block-card-img block-card-img-five"></div>
+						<div class="block-card-title">
+							<p>Marketing Strategy</p>
+						</div>
+						<div class="block-card-data">Sep 2022</div>
+					</div>
+
+
+					<div class="block-card">
+						<div class="block-card-img block-card-img-six"></div>
+						<div class="block-card-title">
+							<p>Business Consulting</p>
+						</div>
+						<div class="block-card-data">Sep 2022</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+
+		<!-- maket 4 Welcome Whitecollar -->
+		<div class="block-welcome-whitecollar">
+			<h5><span></span>Welcome Whitecollar</h5>
+			<h2>We Care About Your Business Plan.</h2>
+			<div class="block-welcome-whitecollar-text">
+				<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+					to corporate strategy foster collaborative thinking to further the overal.
+				</p>
+			</div>
+			<div class="block-welcome-whitecollar-sub-text">
+				<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+					to corporate strategy
+				</p>
+			</div>
+			<ul class="block-welcome-list">
+				<li class="block-welcome-link link-one">Components of a Business Strategy</li>
+				<li class="block-welcome-link">Business Consulting</li>
+			</ul>
+
+
+			<div class="block-welcome-cards">
+
+				<div class="block-welcome-card">
+					<div class="block-welcome-card-first">
+						<div class="block-welcome-card-title">
+							Experience
+						</div>
+						<div class="block-welcome-card-sub-title">
+							Leverage frameworks toprovidee werment.
+						</div>
+					</div>
+
+
+
+					<div class="block-welcome-card-two">
+						<div class="block-welcome-card-title">
+							Awards Winner
+						</div>
+						<div class="block-welcome-card-sub-title-two">
+							Leverage frameworks toprovidee werment.
+						</div>
+					</div>
+				</div>
+				
+			</div>
+
+			<div class="button">
+				<a href="#">More About Us</a>
+			</div>
+			
+
+			
 		</div>
 
 	</main>
