--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 
 <body>
 
-	<header></header>
+	<header class="header">
+		<ul>
+			<li class="header-link"><a href="#maket-a">maket 1</a></li>
+			<li class="header-link"><a href="#maket-b">maket 2</a></li>
+			<li class="header-link"><a href="#maket-c">maket 3</a></li>
+			<li class="header-link"><a href="#maket-d">maket 4</a></li>
+		</ul>
+	</header>
 	<main>
 
 		<!-- maket 1 Clothing for Women Online in India -->
-		<div class="block-clothing-for-women-india">
+		<div id="maket-a" class="block-clothing-for-women-india">
 			<span class="block-clothing-for-women-india-span"></span>
 			<h2>Clothing for Women Online in India</h2>
 			<div class="block-clothing-for-women-india-text">
@@ -59,7 +66,7 @@
 
 
 		<!-- maket 2 EuphoriaEcommerce -->
-		<div class="block-euphoria">
+		<div id="maket-b" class="block-euphoria">
 			<div class="block-euphoria-left">
 				<div class="block-euphoria-left-content">
 					<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
@@ -76,7 +83,7 @@
 
 
 		<!-- maket 3 Latest Projects -->
-		<div class="block-latest-projects">
+		<div  id="maket-c" class="block-latest-projects">
 			<div class="block-latest-projects-text">
 				<h5><span class="block-latest-projects-span"></span>Latest Projects</h5>
 				<h2>Discover our latest client projects</h2>
@@ -152,7 +159,7 @@
 
 
 		<!-- maket 4 Welcome Whitecollar -->
-		<div class="block-welcome-whitecollar">
+		<div  id="maket-d" class="block-welcome-whitecollar">
 			<h5><span></span>Welcome Whitecollar</h5>
 			<h2>We Care About Your Business Plan.</h2>
 			<div class="block-welcome-whitecollar-text">
@@ -206,7 +213,14 @@
 		</div>
 
 	</main>
-	<footer></footer>
+	<footer>
+		<ul>
+			<li class="footer-link"><a href="#maket-a">maket 1</a></li>
+			<li class="footer-link"><a href="#maket-b">maket 2</a></li>
+			<li class="footer-link"><a href="#maket-c">maket 3</a></li>
+			<li class="footer-link"><a href="#maket-d">maket 4</a></li>
+		</ul>
+	</footer>
 
 </body>
 
