--- a/index.html
+++ b/index.html
@@ -82,84 +82,8 @@
 		</div>
 
 
-		<!-- maket 3 Latest Projects -->
-		<div  id="maket-c" class="block-latest-projects">
-			<div class="block-latest-projects-text">
-				<h5><span class="block-latest-projects-span"></span>Latest Projects</h5>
-				<h2>Discover our latest client projects</h2>
-				<div class="block-latest-projects-sub-title">
-					<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
-						approaches
-						to corporate strategy foster collaborative thinking to further the overal.
-					</p>
-				</div>
-			</div>
-
-
-			<div class="block-cards">
-				<div class="row-a">
-					<div class="block-card">
-						<div class="block-card-img block-card-img-first"></div>
-						<div class="block-card-title">
-							<p>Financial Investment</p>
-						</div>
-						<div class="block-card-data">Sep 2022</div>
-					</div>
-
-
-					<div class="block-card ">
-						<div class="block-card-img block-card-img-two"></div>
-						<div class="block-card-title">
-							<p>Marketing Strategy</p>
-						</div>
-						<div class="block-card-data">Sep 2022</div>
-					</div>
-
-
-					<div class="block-card">
-						<div class="block-card-img block-card-img-tree"></div>
-						<div class="block-card-title">
-							<p>Business Consulting</p>
-						</div>
-						<div class="block-card-data">Sep 2022</div>
-					</div>
-				</div>
-
-
-				<div class="row-b">
-					<div class="block-card">
-						<div class="block-card-img block-card-img-four"></div>
-						<div class="block-card-title">
-							<p>Financial Investment</p>
-						</div>
-						<div class="block-card-data">Sep 2022</div>
-					</div>
-
-
-					<div class="block-card">
-						<div class="block-card-img block-card-img-five"></div>
-						<div class="block-card-title">
-							<p>Marketing Strategy</p>
-						</div>
-						<div class="block-card-data">Sep 2022</div>
-					</div>
-
-
-					<div class="block-card">
-						<div class="block-card-img block-card-img-six"></div>
-						<div class="block-card-title">
-							<p>Business Consulting</p>
-						</div>
-						<div class="block-card-data">Sep 2022</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-
 		<!-- maket 4 Welcome Whitecollar -->
-		<div  id="maket-d" class="block-welcome-whitecollar">
+		<div id="maket-d" class="block-welcome-whitecollar">
 			<h5><span></span>Welcome Whitecollar</h5>
 			<h2>We Care About Your Business Plan.</h2>
 			<div class="block-welcome-whitecollar-text">
@@ -201,16 +125,115 @@
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 
 			<div class="button">
 				<a href="#">More About Us</a>
 			</div>
-			
 
-			
+
+
 		</div>
+
+
+		<!-- maket 3 Latest Projects -->
+		<div class="page-3-latest">
+			<div class="page-3-latest-top-body">
+
+				<div class="box-top">
+					<h5><span></span>Latest Projects</h5>
+					<div class="box-top-title">
+						<p>Discover our latest client projects</p>
+					</div>
+					<div class="box-top-sub-title">
+						<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
+							approaches to corporate strategy foster collaborative thinking to further the overal.
+						</p>
+					</div>
+				</div>
+
+				<div class="box-down">
+					<div class="box-down-row-1"> <!-- row 1 -->
+						<div class="box-down-columns">
+							<div class="box-down-column"><!-- column 1 -->
+								<div class="box-down-column-img img-1">
+								</div>
+								<div class="box-down-column-title">
+									<p>Financial Investment</p>
+								</div>
+								<div class="box-down-column-data">
+									<p><span></span>Sep 2022</p>
+								</div>
+							</div>
+
+							<div class="box-down-column"><!-- column 2 -->
+								<div class="box-down-column-img img-2">
+								</div>
+								<div class="box-down-column-title">
+									<p>Marketing Strategy</p>
+								</div>
+								<div class="box-down-column-data">
+									<p><span></span>Sep 2022</p>
+								</div>
+							</div>
+
+							<div class="box-down-column"><!-- column 3 -->
+								<div class="box-down-column-img img-3">
+								</div>
+								<div class="box-down-column-title">
+									<p>Business Consulting</p>
+								</div>
+								<div class="box-down-column-data">
+									<p><span></span>Sep 2022</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="box-down-row-2"> <!-- row 2 -->
+						<div class="box-down-columns">
+							<div class="box-down-column"><!-- column 4 -->
+								<div class="box-down-column-img img-4">
+								</div>
+								<div class="box-down-column-title">
+									<p>Financial Investment</p>
+								</div>
+								<div class="box-down-column-data">
+									<p><span></span>Sep 2022</p>
+								</div>
+							</div>
+
+							<div class="box-down-column"><!-- column 5 -->
+								<div class="box-down-column-img img-5">
+								</div>
+								<div class="box-down-column-title">
+									<p>Marketing Strategy</p>
+								</div>
+								<div class="box-down-column-data">
+									<p><span></span>Sep 2022</p>
+								</div>
+							</div>
+
+							<div class="box-down-column"><!-- column 6 -->
+								<div class="box-down-column-img img-6">
+								</div>
+								<div class="box-down-column-title">
+									<p>Business Consulting</p>
+								</div>
+								<div class="box-down-column-data">
+									<p><span></span>Sep 2022</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
 
 	</main>
 	<footer>
