--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <body>
-
+		
 	<header class="header">
 		<ul>
 			<li class="header-link"><a href="#maket-a">maket 1</a></li>
@@ -21,217 +21,218 @@
 	</header>
 	<main>
 
-		<!-- maket 1 Clothing for Women Online in India -->
-		<div id="maket-a" class="block-clothing-for-women-india">
-			<span class="block-clothing-for-women-india-span"></span>
-			<h2>Clothing for Women Online in India</h2>
-			<div class="block-clothing-for-women-india-text">
-				<div class="block-clothing-for-women-india-title">
-					<p>Reexplore Women's Clothing Collection Online at Euphoria</p>
-				</div>
-				<div class="block-clothing-for-women-india-sub-title">
-					<p>Women's Clothing – Are you searching for the best website to buy Clothing for Women online in
-						India?
-						Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual
-						Womens Wear Online shopping to premium quality cotton women's apparel, <span>Euphoria</span> has
-						closet of Women
-						Collection covered with the latest and best designs of Women's Clothing Online.</p>
-				</div>
-				<div class="block-clothing-for-women-india-sub-title-two">
-					<p>Our collection of clothes for women will make you the trendsetter with an iconic resemblance of
-						choice in Womens Wear.
-					</p>
-				</div>
-				<h3>One-Stop Destination to Shop Every Clothing for Women: Euphoria</h3>
-				<div class="block-clothing-for-women-india-sub-title">
-					<p>Today, Clothing for Women is gaining more popularity above all. This is because gone are the days
-						when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is
-						in
-						Casual Womens Wear which is a comfortable outfit. Concerning this, <span>Euphoria</span> has a
-						big fat range of
-						Stylish Women's Clothing that would make her the winner wherever she goes.
-					</p>
-				</div>
-				<div class="block-clothing-for-women-india-sub-title-tree">
-					<p>Our collection of clothes for women will make you the trendsetter with an iconic resemblance of
-						choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online
-						stores where you can buy Western Wear for Women comprising the premium material and elegant
-						design
-						that you are always seeking for. Basically,
-					</p>
-				</div>
-				<a href="#">See More</a>
-			</div>
-		</div>
-
-
-		<!-- maket 2 EuphoriaEcommerce -->
-		<div id="maket-b" class="block-euphoria">
-			<div class="block-euphoria-left">
-				<div class="block-euphoria-left-content">
-					<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
-					<p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
-						Affordable fashion 24/7
-					</p>
-					<a href="#">Shop Now</a>
-				</div>
-			</div>
-
-			<div class="block-euphoria-right">
-			</div>
-		</div>
-
-
-		<!-- maket 4 Welcome Whitecollar -->
-		<div id="maket-d" class="block-welcome-whitecollar">
-			<h5><span></span>Welcome Whitecollar</h5>
-			<h2>We Care About Your Business Plan.</h2>
-			<div class="block-welcome-whitecollar-text">
-				<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
-					to corporate strategy foster collaborative thinking to further the overal.
-				</p>
-			</div>
-			<div class="block-welcome-whitecollar-sub-text">
-				<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
-					to corporate strategy
-				</p>
-			</div>
-			<ul class="block-welcome-list">
-				<li class="block-welcome-link link-one">Components of a Business Strategy</li>
-				<li class="block-welcome-link">Business Consulting</li>
-			</ul>
-
-
-			<div class="block-welcome-cards">
-
-				<div class="block-welcome-card">
-					<div class="block-welcome-card-first">
-						<div class="block-welcome-card-title">
-							Experience
+		<div class="wrapper">
+				<!-- maket 1 Clothing for Women Online in India -->
+				<div id="maket-a" class="block-clothing-for-women-india">
+					<h2><span class="line"></span>Clothing for Women Online in India</h2>
+					<div class="block-clothing-for-women-india-text">
+						<div class="block-clothing-for-women-india-title">
+							<p>Reexplore Women's Clothing Collection Online at Euphoria</p>
 						</div>
-						<div class="block-welcome-card-sub-title">
-							Leverage frameworks toprovidee werment.
+						<div class="block-clothing-for-women-india-sub-title">
+							<p>Women's Clothing – Are you searching for the best website to buy Clothing for Women online in
+								India?
+								Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual
+								Womens Wear Online shopping to premium quality cotton women's apparel, <span>Euphoria</span> has
+								closet of Women
+								Collection covered with the latest and best designs of Women's Clothing Online.</p>
 						</div>
-					</div>
-
-
-
-					<div class="block-welcome-card-two">
-						<div class="block-welcome-card-title">
-							Awards Winner
+						<div class="block-clothing-for-women-india-sub-title-two">
+							<p>Our collection of clothes for women will make you the trendsetter with an iconic resemblance of
+								choice in Womens Wear.
+							</p>
 						</div>
-						<div class="block-welcome-card-sub-title-two">
-							Leverage frameworks toprovidee werment.
+						<h3>One-Stop Destination to Shop Every Clothing for Women: Euphoria</h3>
+						<div class="block-clothing-for-women-india-sub-title">
+							<p>Today, Clothing for Women is gaining more popularity above all. This is because gone are the days
+								when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is
+								in
+								Casual Womens Wear which is a comfortable outfit. Concerning this, <span>Euphoria</span> has a
+								big fat range of
+								Stylish Women's Clothing that would make her the winner wherever she goes.
+							</p>
 						</div>
+						<div class="block-clothing-for-women-india-sub-title-tree">
+							<p>Our collection of clothes for women will make you the trendsetter with an iconic resemblance of
+								choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online
+								stores where you can buy Western Wear for Women comprising the premium material and elegant
+								design
+								that you are always seeking for. Basically,
+							</p>
+						</div>
+						<a href="#">See More</a>
 					</div>
 				</div>
 
-			</div>
 
-			<div class="button">
-				<a href="#">More About Us</a>
-			</div>
-
-
-
-		</div>
-
-
-		<!-- maket 3 Latest Projects -->
-		<div class="page-3-latest">
-			<div class="page-3-latest-top-body">
-
-				<div class="box-top">
-					<h5><span></span>Latest Projects</h5>
-					<div class="box-top-title">
-						<p>Discover our latest client projects</p>
+				<!-- maket 2 EuphoriaEcommerce -->
+				<div id="maket-b" class="block-euphoria">
+					<div class="block-euphoria-left">
+						<div class="block-euphoria-left-content">
+							<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
+							<p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
+								Affordable fashion 24/7
+							</p>
+							<a href="#">Shop Now</a>
+						</div>
 					</div>
-					<div class="box-top-sub-title">
-						<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
-							approaches to corporate strategy foster collaborative thinking to further the overal.
+
+					<div class="block-euphoria-right">
+					</div>
+				</div>
+
+				
+				<!-- maket 3 Latest Projects -->
+				<div id="maket-с" class="page-3-latest">
+					<div class="page-3-latest-top-body">
+
+						<div class="box-top">
+							<h5><span></span>Latest Projects</h5>
+							<div class="box-top-title">
+								<p>Discover our latest client projects</p>
+							</div>
+							<div class="box-top-sub-title">
+								<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
+									approaches to corporate strategy foster collaborative thinking to further the overal.
+								</p>
+							</div>
+						</div>
+
+						<div class="box-down">
+							<div class="box-down-row-1"> <!-- row 1 -->
+								<div class="box-down-columns">
+									<div class="box-down-column"><!-- column 1 -->
+										<div class="box-down-column-img img-1">
+										</div>
+										<div class="box-down-column-title">
+											<p>Financial Investment</p>
+										</div>
+										<div class="box-down-column-data">
+											<p><span></span>Sep 2022</p>
+										</div>
+									</div>
+
+									<div class="box-down-column"><!-- column 2 -->
+										<div class="box-down-column-img img-2">
+										</div>
+										<div class="box-down-column-title">
+											<p>Marketing Strategy</p>
+										</div>
+										<div class="box-down-column-data">
+											<p><span></span>Sep 2022</p>
+										</div>
+									</div>
+
+									<div class="box-down-column"><!-- column 3 -->
+										<div class="box-down-column-img img-3">
+										</div>
+										<div class="box-down-column-title">
+											<p>Business Consulting</p>
+										</div>
+										<div class="box-down-column-data">
+											<p><span></span>Sep 2022</p>
+										</div>
+									</div>
+								</div>
+							</div>
+
+
+							<div class="box-down-row-2"> <!-- row 2 -->
+								<div class="box-down-columns">
+									<div class="box-down-column"><!-- column 4 -->
+										<div class="box-down-column-img img-4">
+										</div>
+										<div class="box-down-column-title">
+											<p>Financial Investment</p>
+										</div>
+										<div class="box-down-column-data">
+											<p><span></span>Sep 2022</p>
+										</div>
+									</div>
+
+									<div class="box-down-column"><!-- column 5 -->
+										<div class="box-down-column-img img-5">
+										</div>
+										<div class="box-down-column-title">
+											<p>Marketing Strategy</p>
+										</div>
+										<div class="box-down-column-data">
+											<p><span></span>Sep 2022</p>
+										</div>
+									</div>
+
+									<div class="box-down-column"><!-- column 6 -->
+										<div class="box-down-column-img img-6">
+										</div>
+										<div class="box-down-column-title">
+											<p>Business Consulting</p>
+										</div>
+										<div class="box-down-column-data">
+											<p><span></span>Sep 2022</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<!-- maket 4 Welcome Whitecollar -->
+				<div id="maket-d" class="block-welcome-whitecollar">
+					<h5><span></span>Welcome Whitecollar</h5>
+					<h2>We Care About Your Business Plan.</h2>
+					<div class="block-welcome-whitecollar-text">
+						<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+							to corporate strategy foster collaborative thinking to further the overal.
 						</p>
 					</div>
-				</div>
+					<div class="block-welcome-whitecollar-sub-text">
+						<p>Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+							to corporate strategy
+						</p>
+					</div>
+					<ul class="block-welcome-list">
+						<li class="block-welcome-link link-one">Components of a Business Strategy</li>
+						<li class="block-welcome-link">Business Consulting</li>
+					</ul>
 
-				<div class="box-down">
-					<div class="box-down-row-1"> <!-- row 1 -->
-						<div class="box-down-columns">
-							<div class="box-down-column"><!-- column 1 -->
-								<div class="box-down-column-img img-1">
+					<!-- -- -->
+					<div class="block-welcome-cards">
+
+						<div class="block-welcome-card">
+							<div class="block-welcome-card-first">
+								<div class="block-welcome-card-title">
+									Experience
 								</div>
-								<div class="box-down-column-title">
-									<p>Financial Investment</p>
-								</div>
-								<div class="box-down-column-data">
-									<p><span></span>Sep 2022</p>
+								<div class="block-welcome-card-sub-title">
+									Leverage frameworks toprovidee werment.
 								</div>
 							</div>
 
-							<div class="box-down-column"><!-- column 2 -->
-								<div class="box-down-column-img img-2">
-								</div>
-								<div class="box-down-column-title">
-									<p>Marketing Strategy</p>
-								</div>
-								<div class="box-down-column-data">
-									<p><span></span>Sep 2022</p>
-								</div>
-							</div>
+							<!-- -- -->
 
-							<div class="box-down-column"><!-- column 3 -->
-								<div class="box-down-column-img img-3">
+							<div class="block-welcome-card-two">
+								<div class="block-welcome-card-title">
+									Awards Winner
 								</div>
-								<div class="box-down-column-title">
-									<p>Business Consulting</p>
-								</div>
-								<div class="box-down-column-data">
-									<p><span></span>Sep 2022</p>
+								<div class="block-welcome-card-sub-title-two">
+									Leverage frameworks toprovidee werment.
 								</div>
 							</div>
 						</div>
+
+					</div>
+					<!-- -- -->
+					<div class="button">
+						<a href="#">More About Us</a>
 					</div>
 
 
-					<div class="box-down-row-2"> <!-- row 2 -->
-						<div class="box-down-columns">
-							<div class="box-down-column"><!-- column 4 -->
-								<div class="box-down-column-img img-4">
-								</div>
-								<div class="box-down-column-title">
-									<p>Financial Investment</p>
-								</div>
-								<div class="box-down-column-data">
-									<p><span></span>Sep 2022</p>
-								</div>
-							</div>
 
-							<div class="box-down-column"><!-- column 5 -->
-								<div class="box-down-column-img img-5">
-								</div>
-								<div class="box-down-column-title">
-									<p>Marketing Strategy</p>
-								</div>
-								<div class="box-down-column-data">
-									<p><span></span>Sep 2022</p>
-								</div>
-							</div>
-
-							<div class="box-down-column"><!-- column 6 -->
-								<div class="box-down-column-img img-6">
-								</div>
-								<div class="box-down-column-title">
-									<p>Business Consulting</p>
-								</div>
-								<div class="box-down-column-data">
-									<p><span></span>Sep 2022</p>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
-			</div>
+
 		</div>
-
 
 
 
