--- a/index.html
+++ b/index.html
@@ -67,18 +67,21 @@
 
 				<!-- maket 2 EuphoriaEcommerce -->
 				<div id="maket-b" class="block-euphoria">
-					<div class="block-euphoria-left">
-						<div class="block-euphoria-left-content">
-							<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
-							<p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
-								Affordable fashion 24/7
-							</p>
-							<a href="#">Shop Now</a>
+					<div class="block-euphoria-body">
+						<div class="block-euphoria-left">
+							<div class="block-euphoria-left-content">
+								<h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
+								<p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
+									Affordable fashion 24/7
+								</p>
+								<a href="#">Shop Now</a>
+							</div>
 						</div>
+
+						<div class="block-euphoria-right">
+						</div>	
 					</div>
 
-					<div class="block-euphoria-right">
-					</div>
 				</div>
 
 				
